# zephyr-projects

./: .gitignore  README.md
button/: prj.conf
peripheral_external_lbs/: CMakeLists.txt
peripheral_external_lbs/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
platform-seeedboards-main/examples/zephyr-expansion-base-for-xiao/sd_card/: platformio.ini
platform-seeedboards-main/examples/zephyr-expansion-base-for-xiao/sd_card/zephyr/: app.overlay  prj.conf
platform-seeedboards-main/zephyr/boards/: xiao_nrf54l15_nrf54l15_cpuapp.overlay
sensor_data/: CMakeLists.txt  prj.conf
sensor_data/src/: datos.h  main.c
sensor_data_CSV/: CMakeLists.txt  csv_data.h.in  prj.conf
sensor_data_CSV/data/: analogtest_data_Abel.csv
sensor_data_CSV/src/: main.c
sensor_data_ble/: CMakeLists.txt  README.rst
sensor_data_ble/src/: main.c
sensor_data_ble_Csv/: prj.conf
sensor_data_ble_Csv/src/: main.c
